# Nautilus

./: .editorconfig  .gitignore  Build.bat  Build.sh  CMakeLists.txt  Nautilus.h  Nautilus.sln  Nautilus.vcxproj  Nautilus.vcxproj.filters  README.md  genPCH.py  genproj.py
.github/: CODE-OF-CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/workflows/: apple-build.yml  ci-cmake.yml  cmake-multi-platform.yml  cmake.yml  linux-build.yml  macos-build.yml  mingw.yml  unix.yml  windows-build.yml
Core/: Application.h  CMakeLists.txt  Clock.cpp  Clock.h  Core.h  File.cpp  File.h  Logger.cpp  Logger.h  Threading.cpp  Threading.h
Core/Math/: Color.cpp  Color.h  Mat4x4.cpp  Mat4x4.h  Mat4x4.inl  Plane.cpp  Plane.h  Ray2.cpp  Ray2.h  Ray2.inl  Ray3.cpp  Ray3.h  Ray3.inl  Rect.cpp  Rect.h  Vec2.cpp  Vec2.h  Vec2.inl  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl  Vertex.cpp  Vertex.h
Core/Platform/: API.h  Event.h  Input.h  NativeHandle.h  Platform.h  Renderer.h  Window.h
Core/Platform/Android/: Event.cpp  Input.cpp  Renderer.cpp  Window.cpp
Core/Platform/Cocoa/: Event.mm  Window.mm
Core/Platform/D3D12/: Event.cpp  Window.cpp
Core/Platform/DirectX/: Event.cpp  Window.cpp
Core/Platform/Emscripten/: Input.cpp  Renderer.cpp  Window.cpp
Core/Platform/MacOS/: Input.mm  Renderer.mm  Window.mm
Core/Platform/UIKit/: Event.mm  Window.mm
Core/Platform/Unix/: Input.cpp  Renderer.cpp  Window.cpp
Core/Platform/Windows/: Input.cpp  Renderer.cpp  Window.cpp
Core/Platform/X11/: Event.cpp  Window.cpp
Core/Platform/iOS/: Input.mm  Renderer.mm  Window.mm
Core/Rendering/: Renderer.h
Core/Rendering/DirectX/: Renderer.cpp
Core/Rendering/Metal/: Renderer.mm
Core/Rendering/OpenGL/: Renderer.cpp
Core/Rendering/OpenGLES/: Renderer.cpp
GLAD/: CMakeLists.txt
GLAD/include/KHR/: khrplatform.h
GLAD/include/glad/: egl.h  gl.h  gles2.h  glx.h  wgl.h
Nautilus/: CMakeLists.txt  Core.h  EntryPoint.h  Event.h  Math.h  Nautilus.h  PCH.h  Renderer.h  Window.h
Nautilus/Core/: Angle.cpp  Angle.h  Application.cpp  Application.h  ApplicationEvent.cpp  ApplicationEvent.h  Assertion.h  Atom.cpp  Atom.h  Atom.inl  Bits.h  Color.cpp  Color.h  Color.inl  DeviceInfo.cpp  DeviceInfo.h  Endian.h  Event.cpp  Event.h  Event.inl  Filesystem.cpp  Filesystem.h  Input.cpp  Input.h  KeyCodes.h  KeyEvent.cpp  KeyEvent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Mat3x3.cpp  Mat3x3.h  Mat3x3.inl  Mat4x4.cpp  Mat4x4.h  Mat4x4.inl  MouseEvent.cpp  (+30 more)
Nautilus/Core/Android/: Battery.cpp  DeviceInfo.cpp  Input.cpp  UID.cpp  Window.cpp
Nautilus/Core/Linux/: Battery.cpp  DeviceInfo.cpp  Input.cpp  UID.cpp  Window.cpp
Nautilus/Core/MacOS/: Battery.mm  DeviceInfo.mm  Input.mm  UID.mm  Window.mm
Nautilus/Core/WASM/: Battery.cpp  DeviceInfo.cpp  Input.cpp  UID.cpp  Window.cpp
Nautilus/Core/Windows/: Battery.cpp  DeviceInfo.cpp  Input.cpp  UID.cpp  Window.cpp
Nautilus/Core/iOS/: Battery.mm  DeviceInfo.mm  Input.mm  Window.mm
Nautilus/Renderer/: Context.cpp  Context.h
Nautilus/Renderer/Android/: Context.cpp
Nautilus/Renderer/Linux/: Context.cpp
Nautilus/Renderer/MacOS/: Context.mm
Nautilus/Renderer/WASM/: Context.cpp
Nautilus/Renderer/Windows/: Context.cpp
Nautilus/Renderer/iOS/: Context.mm
Nautilus/backends/: CMakeLists.txt  README.md
Nautilus/backends/include/glad/: egl.h  gl.h  gles1.h  glsc2.h  glx.h
Nautilus/backends/src/: egl.c  wgl.c
Nautilus/core/: API.h  CMakeLists.txt  Config.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Types.h
Nautilus/event/: CMakeLists.txt  Event.cpp  Event.h  EventAndroid.cpp  EventCocoa.mm  EventUIKit.mm  EventWin32.cpp  EventX11.cpp
Nautilus/math/: Angle.cpp  Angle.h  CMakeLists.txt  Color.cpp  Color.h  Internal.cpp  Internal.h  Mat4x4.cpp  Mat4x4.h  Mat4x4.inl  Ray2.cpp  Ray2.h  Ray2.inl  Ray3.cpp  Ray3.h  Ray3.inl  Rect.cpp  Rect.h  Rect.inl  Vec2.cpp  Vec2.h  Vec2.inl  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl  Vertex.cpp  Vertex.h
Nautilus/src/: nautilus.h
Nautilus/src/Nautilus/: app.cpp  app.h  core.h  entryPoint.h  log.cpp  log.h
Nautilus/window/: CMakeLists.txt  WindowAndroid.cpp  WindowAndroid.h  WindowBase.cpp  WindowBase.h  WindowCocoa.h  WindowCocoa.mm  WindowDesc.h  WindowUIKit.h  WindowUIKit.mm  WindowWin32.cpp  WindowWin32.h  WindowX11.cpp  WindowX11.h
Sandbox/: CMakeLists.txt  Sandbox.cpp  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/src/: sandbox.cpp
Scripts/: genDefs.py  genPCH.py
backend/: README.md  glx.h  vulkan.h  wgl.h
backends/: CMakeLists.txt  README.md  egl.h  gl.h
backends/include/KHR/: khrplatform.h
backends/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  vulkansc.h  wgl.h
backends/src/: egl.c  gl.c  gles1.c  gles2.c  glsc2.c  glx.c  vulkan.c  vulkansc.c  wgl.c
docs/: Build.md  Dependencies.md
examples/cube/: main.cpp
examples/triangle/: main.cpp
examples/window/: CMakeLists.txt  main.cpp
